vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

    /**
     * Always returns minus one.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_instance ignored<br>
     * \return always -1<br>
     * Original signature : <code>int libvlc_get_log_verbosity(const libvlc_instance_t*)</code><br>
     * <i>native declaration : line 529</i>
     */
    public static native int libvlc_get_log_verbosity(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * This function does nothing.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_instance ignored<br>
     * \param level ignored<br>
     * Original signature : <code>void libvlc_set_log_verbosity(libvlc_instance_t*, unsigned)</code><br>
     * <i>native declaration : line 539</i>
     */
    public static native void libvlc_set_log_verbosity(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, int level);
    /**
     * This function does nothing useful.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_instance libvlc instance<br>
     * \return an unique pointer or NULL on error<br>
     * Original signature : <code>libvlc_log_t* libvlc_log_open(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 549</i>
     */
    public static native Pointer<LibvlcLibrary.vlc_log_t > libvlc_log_open(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * Frees memory allocated by libvlc_log_open().<br>
     * \param p_log libvlc log instance or NULL<br>
     * Original signature : <code>void libvlc_log_close(libvlc_log_t*)</code><br>
     * <i>native declaration : line 557</i>
     */
    public static native void libvlc_log_close(Pointer<LibvlcLibrary.vlc_log_t > p_log);
    /**
     * Always returns zero.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * \return always zero<br>
     * Original signature : <code>int libvlc_log_count(const libvlc_log_t*)</code><br>
     * <i>native declaration : line 567</i>
     */
    public static native int libvlc_log_count(Pointer<LibvlcLibrary.vlc_log_t > p_log);
    /**
     * This function does nothing.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * Original signature : <code>void libvlc_log_clear(libvlc_log_t*)</code><br>
     * <i>native declaration : line 576</i>
     */
    public static native void libvlc_log_clear(Pointer<LibvlcLibrary.vlc_log_t > p_log);
    /**
     * This function does nothing useful.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_log ignored<br>
     * \return an unique pointer or NULL on error or if the parameter was NULL<br>
     * Original signature : <code>libvlc_log_iterator_t* libvlc_log_get_iterator(const libvlc_log_t*)</code><br>
     * <i>native declaration : line 586</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_log_iterator_t > libvlc_log_get_iterator(Pointer<LibvlcLibrary.vlc_log_t > p_log);
    /**
     * Frees memory allocated by libvlc_log_get_iterator().<br>
     * \param p_iter libvlc log iterator or NULL<br>
     * Original signature : <code>void libvlc_log_iterator_free(libvlc_log_iterator_t*)</code><br>
     * <i>native declaration : line 594</i>
     */
    public static native void libvlc_log_iterator_free(Pointer<LibvlcLibrary.libvlc_log_iterator_t > p_iter);
    /**
     * Always returns zero.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_iter ignored<br>
     * \return always zero<br>
     * Original signature : <code>int libvlc_log_iterator_has_next(const libvlc_log_iterator_t*)</code><br>
     * <i>native declaration : line 604</i>
     */
    public static native int libvlc_log_iterator_has_next(Pointer<LibvlcLibrary.libvlc_log_iterator_t > p_iter);
    /**
     * Always returns NULL.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_iter libvlc log iterator or NULL<br>
     * \param p_buf ignored<br>
     * \return always NULL<br>
     * Original signature : <code>libvlc_log_message_t* libvlc_log_iterator_next(libvlc_log_iterator_t*, libvlc_log_message_t*)</code><br>
     * <i>native declaration : line 615</i>
     */
    public static native Pointer<libvlc_log_message_t > libvlc_log_iterator_next(Pointer<LibvlcLibrary.libvlc_log_iterator_t > p_iter, Pointer<libvlc_log_message_t > p_buf);
    /**
     * Release a list of module descriptions.<br>
     * \param p_list the list to be released<br>
     * Original signature : <code>void libvlc_module_description_list_release(libvlc_module_description_t*)</code><br>
     * <i>native declaration : line 638</i>
     */
    public static native void libvlc_module_description_list_release(Pointer<libvlc_module_description_t > p_list);
    /**
     * Returns a list of audio filters that are available.<br>
     * \param p_instance libvlc instance<br>
     * \return a list of module descriptions. It should be freed with libvlc_module_description_list_release().<br>
     *         In case of an error, NULL is returned.<br>
     * \see libvlc_module_description_t<br>
     * \see libvlc_module_description_list_release<br>
     * Original signature : <code>libvlc_module_description_t* libvlc_audio_filter_list_get(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 652</i>
     */
    public static native Pointer<libvlc_module_description_t > libvlc_audio_filter_list_get(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * Returns a list of video filters that are available.<br>
     * \param p_instance libvlc instance<br>
     * \return a list of module descriptions. It should be freed with libvlc_module_description_list_release().<br>
     *         In case of an error, NULL is returned.<br>
     * \see libvlc_module_description_t<br>
     * \see libvlc_module_description_list_release<br>
     * Original signature : <code>libvlc_module_description_t* libvlc_video_filter_list_get(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 666</i>
     */
    public static native Pointer<libvlc_module_description_t > libvlc_video_filter_list_get(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance);
    /**
     * Return the current time as defined by LibVLC. The unit is the microsecond.<br>
     * Time increases monotonically (regardless of time zone changes and RTC<br>
     * adjustements).<br>
     * The origin is arbitrary but consistent across the whole system<br>
     * (e.g. the system uptim, the time since the system was booted).<br>
     * \note On systems that support it, the POSIX monotonic clock is used.<br>
     * Original signature : <code>int64_t libvlc_clock()</code><br>
     * <i>native declaration : line 684</i>
     */
    public static native long libvlc_clock();
    /**
     * Return the delay (in microseconds) until a certain timestamp.<br>
     * \param pts timestamp<br>
     * \return negative if timestamp is in the past,<br>
     * positive if it is in the future<br>
     * Original signature : <code>int64_t libvlc_delay(int64_t)</code><br>
     * <i>native declaration : line 692</i>
     */
    public static native long libvlc_delay(long pts);
    /**
     * Create a media with a certain given media resource location,<br>
     * for instance a valid URL.<br>
     * \note To refer to a local file with this function,<br>
     * the file://... URI syntax <b>must</b> be used (see IETF RFC3986).<br>
     * We recommend using libvlc_media_new_path() instead when dealing with<br>
     * local files.<br>
     * \see libvlc_media_release<br>
     * \param p_instance the instance<br>
     * \param psz_mrl the media location<br>
     * \return the newly created media or NULL on error<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_new_location(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 1048</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_t > libvlc_media_new_location(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, Pointer<Byte > psz_mrl);
    /**
     * Create a media for a certain file path.<br>
     * \see libvlc_media_release<br>
     * \param p_instance the instance<br>
     * \param path local filesystem path<br>
     * \return the newly created media or NULL on error<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_new_path(libvlc_instance_t*, const char*)</code><br>
     * <i>native declaration : line 1061</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_t > libvlc_media_new_path(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, Pointer<Byte > path);
    /**
     * Create a media for an already open file descriptor.<br>
     * The file descriptor shall be open for reading (or reading and writing).<br>
     * Regular file descriptors, pipe read descriptors and character device<br>
     * descriptors (including TTYs) are supported on all platforms.<br>
     * Block device descriptors are supported where available.<br>
     * Directory descriptors are supported on systems that provide fdopendir().<br>
     * Sockets are supported on all platforms where they are file descriptors,<br>
     * i.e. all except Windows.<br>
     * \note This library will <b>not</b> automatically close the file descriptor<br>
     * under any circumstance. Nevertheless, a file descriptor can usually only be<br>
     * rendered once in a media player. To render it a second time, the file<br>
     * descriptor should probably be rewound to the beginning with lseek().<br>
     * \see libvlc_media_release<br>
     * \version LibVLC 1.1.5 and later.<br>
     * \param p_instance the instance<br>
     * \param fd open file descriptor<br>
     * \return the newly created media or NULL on error<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_new_fd(libvlc_instance_t*, int)</code><br>
     * <i>native declaration : line 1089</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_t > libvlc_media_new_fd(Pointer<LibvlcLibrary.libvlc_instance_t > p_instance, int fd);
    /**
     * Create a media with custom callbacks to read the data from.<br>
     * \param instance LibVLC instance<br>
     * \param open_cb callback to open the custom bitstream input media<br>
     * \param read_cb callback to read data (must not be NULL)<br>
     * \param seek_cb callback to seek, or NULL if seeking is not supported<br>
     * \param close_cb callback to close the media, or NULL if unnecessary<br>
     * \param opaque data pointer for the open callback<br>
     * \return the newly created media or NULL on error<br>
     * \note If open_cb is NULL, the opaque pointer will be passed to read_cb,<br>
     * seek_cb and close_cb, and the stream size will be treated as unknown.<br>
     * \note The callbacks may be called asynchronously (from another thread).<br>
     * A single stream instance need not be reentrant. However the open_cb needs to<br>
     * be reentrant if the media is used by multiple player instances.<br>
     * \warning The callbacks may be used until all or any player instances<br>
     * that were supplied the media item are stopped.<br>
     * \see libvlc_media_release<br>
     * \version LibVLC 3.0.0 and later.<br>
     * Original signature : <code>libvlc_media_t* libvlc_media_new_callbacks(libvlc_instance_t*, libvlc_media_open_cb, libvlc_media_read_cb, libvlc_media_seek_cb, libvlc_media_close_cb, void*)</code><br>
     * <i>native declaration : line 1119</i>
     */
    public static native Pointer<LibvlcLibrary.libvlc_media_t > libvlc_media_new_callbacks(Pointer<LibvlcLibrary.libvlc_instance_t > instance, Pointer<LibvlcLibrary.libvlc_media_open_cb > open_cb, LibvlcLibrary.libvlc_media_read_cb read_cb, Pointer<LibvlcLibrary.libvlc_media_seek_cb > seek_cb, Pointer<LibvlcLibrary.libvlc_media_close_cb > close_cb, Pointer<? > opaque);
